2010-07-01  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_save.m

	- Add input argument to control whether data is converted to uint8
	or not before saving.

	* CardiacToolbox/process_misas_patient.m

	- if we have two NormalMri volumes, combine them with a max()
	function to remove banding artifacts, as suggested by Matt Robson

2010-06-30  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* release 0.2.1

	- New minor release given that the bug in WriteRawFile.m and
	WriteMhaFile.m was quite severe, and the new scinrrd_load()
	functionality is interesting.

	* FileFormatToolbox/scinrrd_load.m

	- Now this function can also load an nrrd struct from MetaImage
	(.mha) files, and not only Matlab (.mat). This should save us from
	a lot of time wasted having to load .mha files in Seg3D and
	exported as .mat.

2010-06-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/WriteRawFile.m,
	FileFormatToolbox/WriteMhaFile.m

	- Fix bug. DICOM frames are loaded into Matlab with X-coordinates
	along columns, but they were written along rows, so the image
	volume was rotated 90º.

2010-06-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_rv_crescent_tips.m

	- Instead of assigning the top and botton of the crest to the last
	and first axis points, just compute from each slice the closest
	axis point. Now there is no need for the axis and the right
	ventricle to have the same number of slices.

2010-06-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add CardiacToolbox/scinrrd_valve_surface.m.

	- Inter atrio-ventricular surface.

2010-06-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/crest_envelope.m:

	- Compute the envelope for the Right Ventricle's crest.

2010-05-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/process_misas_patient.m

	- Remove assumption that subdirectories with IMA files are called
	MISAS*. We need this because Jason will rename the MISAS*